...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sleep_from_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sleepFromInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
...
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="@string/sleep_until_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sleepUntilInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addSleepEntryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/add_sleep_entry" />
        </LinearLayout>

...
