...
            android:maxLines="1"
            android:textColor="?android:textColorSecondary"
            android:textSize="12sp"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/sleepEntryDeleteButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/remove_completion"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />
...
